# grid_trader

./: README.md  grid-trader.code-workspace
infra/: Makefile  docker-compose.yml
node/: .dockerignore  .env.example  .gitignore  .nvmrc  Dockerfile  package.json  tsconfig.json
node/src/: client.ts  grid.ts  helpers.ts  index.ts  infinite.ts  reducer.spec.ts  reducer.ts  scratchpad.ts  store.ts  types.ts
python/: Dockerfile  infinite_bot.py  pyproject.toml
